--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font awesome cdn link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- custom css link -->
     <link rel="stylesheet" href="css/style.css">
     <title>Complete Responsive Tour and Travel website</title>
 </head>
 <body>
+    <!-- header section start -->
+    <header>
+        <a href="#" class="logo">travel <span>.</span></a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home" class="active">home</a></li>
+                <li><a href="#feature">feature</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#gallery">gallery</a></li>
+            </ul>
+    </nav>
+    <div class="fas fa-bars"></div>
+    </header>
+    <!-- header section end -->
 
 
 
