added home section with content and form and styling it

--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
     </header>
     <!-- header section end -->
 
+    <!-- home section start -->
+    <section id="home" class="home">
+        <div class="video">
+            <video src="images/home-video.mp4" autoplay></video>
+        </div>
+        <div class="content">
+            <h1>explore new place, <br> adventure awaits. </h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quod totam temporibus vel illum nemo deleniti consequatur assumenda velit rem! Laboriosam suscipit iusto iure temporibus provident saepe veniam dicta iste?</p>
+        </div>
+        <div class="form-container">
+            <form action="">
+                <h3>search for your destination</h3>
+
+                <span>location</span>
+                <input type="text" name="place" id="place" placeholder="place you want to visti">
+
+                <span>guest members</span>
+                <input type="number" name="guest" id="guest" placeholder="number of peoples">
+
+                <span>arrivals</span>
+                <input type="date" name="arivals" id="arivals">
+
+                <span>leaving</span>
+                <input type="date" name="leaving" id="leaving">
+
+                <input type="submit" value="search">
+            </form>
+        </div>
+    </section>
+    <!-- home section end -->
+
 
 
 
