added feature section, styling it and added custom js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <a href="#" class="logo">travel <span>.</span></a>
         <nav class="navbar">
             <ul>
-                <li><a href="#home" class="active">home</a></li>
-                <li><a href="#feature">feature</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#gallery">gallery</a></li>
+                <li><a data-scroll="home" href="#home" class="active">home</a></li>
+                <li><a data-scroll="feature" href="#feature">feature</a></li>
+                <li><a data-scroll="about" href="#about">about</a></li>
+                <li><a data-scroll="gallery" href="#gallery">gallery</a></li>
+                <li><a data-scroll="review" href="#review">review</a></li>
+                <li><a data-scroll="contact" href="#contact">contact</a></li>
             </ul>
     </nav>
     <div class="fas fa-bars"></div>
@@ -40,13 +42,13 @@
                 <h3>search for your destination</h3>
 
                 <span>location</span>
-                <input type="text" name="place" id="place" placeholder="place you want to visti">
+                <input type="text" name="place" id="place" placeholder="place you want to visit">
 
                 <span>guest members</span>
                 <input type="number" name="guest" id="guest" placeholder="number of peoples">
 
                 <span>arrivals</span>
-                <input type="date" name="arivals" id="arivals">
+                <input type="date" name="arrivals" id="arrivals">
 
                 <span>leaving</span>
                 <input type="date" name="leaving" id="leaving">
@@ -56,6 +58,64 @@
         </div>
     </section>
     <!-- home section end -->
+
+    <!-- feature section start -->
+    <div class="feature" id="feature">
+        <h1 class="heading"><span>f</span>eature <span>l</span>ocation</h1>
+        <div class="card-container">
+            <div class="card">
+                <span class="dicount">-35%</span>
+                <img src="images/featued-img-1.jpg" alt="">
+                <div class="content">
+                    <h3 class="title">hawaii</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas aliquam architecto magnam vero a. Id odio quidem eaque mollitia nam obcaecati dolor fuga totam aut dolore, perspiciatis enim quis saepe.</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <a href="#"><button class="btn">check out!</button></a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="images/featued-img-2.jpg" alt="">
+                <div class="content">
+                    <h3 class="title">egypt</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas aliquam architecto magnam vero a. Id odio quidem eaque mollitia nam obcaecati dolor fuga totam aut dolore, perspiciatis enim quis saepe.</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <a href="#"><button class="btn">check out!</button></a>
+                </div>
+            </div>
+
+            <div class="card">
+                <span class="dicount">-45%</span>
+                <img src="images/featued-img-3.jpg" alt="">
+                <div class="content">
+                    <h3 class="title">india</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas aliquam architecto magnam vero a. Id odio quidem eaque mollitia nam obcaecati dolor fuga totam aut dolore, perspiciatis enim quis saepe.</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <a href="#"><button class="btn">check out!</button></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- feature section end -->
 
 
 
