--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1 class="heading"><span>f</span>eature <span>l</span>ocation</h1>
         <div class="card-container">
             <div class="card">
-                <span class="dicount">-35%</span>
+                <span class="discount">-35%</span>
                 <img src="images/featued-img-1.jpg" alt="">
                 <div class="content">
                     <h3 class="title">hawaii</h3>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="card">
-                <span class="dicount">-45%</span>
+                <span class="discount">-45%</span>
                 <img src="images/featued-img-3.jpg" alt="">
                 <div class="content">
                     <h3 class="title">india</h3>
@@ -116,6 +116,32 @@
         </div>
     </div>
     <!-- feature section end -->
+
+    <!-- about section start -->
+    <section id="about" class="about">
+        <h1 class="heading"><span>a</span>bout <span>U</span>s</h1>
+        <div class="row">
+            <div class="image">
+                <img src="images/about-img.png" alt="">
+            </div>
+
+            <div class="content">
+                <h3>why choose us ?</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aut accusantium molestias voluptates nostrum maxime obcaecati excepturi corporis cumque eaque nihil dolor dicta doloribus dignissimos, natus, quod cum quasi nemo!
+                </p>
+                <br>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut adipisci, esse molestiae nemo fugit quae tempora earum sit. Cupiditate minima perferendis rerum nobis porro est voluptatem id aperiam qui itaque.
+                </p>
+                <a href="#"><button class="btn btn1">read more</button></a>
+                <a href="#"><button class="btn">get started</button></a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- about section end -->
 
 
 
