added section gallery and styling it

--- a/index.html
+++ b/index.html
@@ -143,6 +143,67 @@
 
     <!-- about section end -->
 
+    <!-- gallery section start -->
+    <section class="gallery" id="gallery">
+        <h1 class="heading"><span>O</span>ur <span>G</span>allery</h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="images/gallery-img-1.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/gallery-img-2.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/gallery-img-3.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/gallery-img-4.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/gallery-img-5.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/gallery-img-6.jpg" alt="">
+                <div class="icons">
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-share"></a>
+                    <a href="" class="fas fa-search"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- gallery section end -->
+
 
 
 
