--- a/index.html
+++ b/index.html
@@ -203,6 +203,63 @@
         </div>
     </section>
     <!-- gallery section end -->
+    <!-- review section start -->
+    <section class="review" id="review">
+        <h1 class="heading"><span>r</span>eview</h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="images/pic-2.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>someone's name</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic dicta illum rerum voluptas natus facilis possimus nam neque. Aut, omnis?</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/pic-3.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>someone's name</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic dicta illum rerum voluptas natus facilis possimus nam neque. Aut, omnis?</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/pic-4.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>someone's name</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic dicta illum rerum voluptas natus facilis possimus nam neque. Aut, omnis?</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- review section end -->
 
 
 
