--- a/index.html
+++ b/index.html
@@ -261,8 +261,51 @@
     </section>
     <!-- review section end -->
 
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <h1 class="heading"><span>C</span>ontact <span>U</span>s</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1121277615803!2d107.12375331476996!3d-6.379524995383789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xabe58dfbaf3d5eb3!2zNsKwMjInNDYuMyJTIDEwN8KwMDcnMzMuNCJF!5e0!3m2!1sid!2sid!4v1647899670837!5m2!1sid!2sid" width="100%" height="300" style="border:0; outline:none;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="row">
+            <div class="contact-info">
+                <div class="box">
+                        <h3><i class="fas fa-home"></i> address</h3>
+                        <p>Perumahan Mega Regency Blok m12 no.13 <br>
+                        Kel. Sukaragam - Kec. Serang Baru <br>
+                        Kab. Bekasi - 17330 <br>
+                        Jawa Barat - Indonesia
+                    </p>
+                </div>
+
+                <div class="box">
+                    <h3><i class="fas fa-envelope"></i> e-mail</h3>
+                    <p>andriyabu@gmail.com</p>
+                </div>
+
+                <div class="box">
+                    <h3><i class="fas fa-phone"></i> phone</h3>
+                    <p>+62 856 747 0029</p>
+                </div>
+            </div>
+
+            <div class="contact-form-container">
+                <form action="">
+                    <h3>get in touch</h3>
+                    <div class="inputBox">
+                        <input type="text" name="name" id="name" placeholder="your full name">
+                        <input type="email" name="email" id="email" placeholder="your email">
+                    </div>
+
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="your message"></textarea>
+                    <input type="submit" value="message">
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- contact section end -->
+    
 
 
+ 
 
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
