added newsletter section and styling it

--- a/index.html
+++ b/index.html
@@ -302,10 +302,16 @@
         </div>
     </section>
     <!-- contact section end -->
-    
-
-
- 
+    <!-- newsletter section start -->
+    <section class="newsletter" id="newsletter">
+        <h1>sign up 25% discount</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim illo iusto suscipit molestias cumque, explicabo hic temporibus eligendi libero fuga distinctio cupiditate aliquid soluta! Doloremque architecto magnam cumque laudantium totam?</p>
+        <form action="#">
+            <input type="email" name="email" id="email" placeholder="enter your email">
+            <input type="submit" value="sign up">
+        </form>
+    </section>
+    <!-- newsletter section end -->
 
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
