added footer section, image for background and styling it

--- a/index.html
+++ b/index.html
@@ -313,6 +313,19 @@
     </section>
     <!-- newsletter section end -->
 
+    <!-- footer section start -->
+    <section class="footer" id="footer">
+        <h1 class="credit">created by <span>Andri Yabu</span> | all rights reserved.</h1>
+        <div class="icons">
+            <a href="https://www.facebook.com/andri.yabu.ndapa.rehing" class="fab fa-facebook-f" target="_blank"></a>
+            <a href="https://www.instagram.com/andri_yabu/" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://github.com/andriyabu" class="fab fa-github" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/andri-yabu-ndapa-rehing/" class="fab fa-linkedin" target="_blank"></a>
+        </div>
+    </section>
+
+    <!-- footer section end -->
+
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js link -->
